--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #设置此项目的端口
-server.port=8761
-#向注册中心注册自己
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# server.port=8761
+#向注册中心1注册自己
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/,http://localhost:8762/eureka/
 spring.application.name=eureka
 # 该应用为服务注册中心，所以设置为false,代表不向注册中心注册自己
 eureka.client.register-with-eureka=false
 # 注册中心的职责就是维护服务实例，所以它不需要去检索服务，也设置为false
 eureka.client.fetch-registry=false
+# 开发环境一般将健康检查设置为关闭
+eureka.server.enable-self-preservation=false
